ajout header en html

--- a/fr/index.html
+++ b/fr/index.html
@@ -8,13 +8,60 @@
 <body>
     <header class="head">
          <section class="head__content">
-            <a href="" class="head__link">
-                <img src="" alt="" class="head__logo">
+            <a href="index.html" class="head__link">
+                <img src="/public/icons/icon_logo-007.svg" alt="logo" class="head__logo">
             </a>
-            <p class="head__menu-btn"></p>
+            <img src="/public/icons/icon_menu-burger.svg" alt="icon menu burger" class="head__menu-burger">
          </section>
 
-         nav.menu
+         <nav class="menu">
+            <section class="menu__header">
+                <a href="index.html" class="head__link">
+                    <img src="/public/icons/icon_logo-007.svg" alt="logo" class="head__logo">
+                </a>
+                <img src="/public/icons/icon_menu-burger.svg" alt="icon menu burger" class="head__menu-burger">
+            </section>
+
+            <section class="menu__main">
+                <ul class="menu__main-list">
+                    <li class="menu__main-element"><a href="" class="menu__main-link">My name is bond...</a></li>
+                    <li class="menu__main-element"><a href="" class="menu__main-link">Skyfall</a></li>
+                    <li class="menu__main-element"><a href="" class="menu__main-link">Sam Mendes</a></li>
+                    <li class="menu__main-element"><a href="" class="menu__main-link">L'opening</a></li>
+                    <li class="menu__main-element"><a href="" class="menu__main-link">Casino royale</a></li>
+                </ul>
+                <ul class="menu__secodnary-list">
+                    <li class="menu__secondary-element"><a href="" class="menu__secondary-link">Filmographie</a></li>
+                    <li class="menu__secondary-element"><a href="" class="menu__secondary-link">Bibliographie</a></li>
+                </ul>
+            </section>
+
+            <section class="menu__footer footer">
+                <nav class="footer__nav">
+                    <ul class="footer__list">
+                        <li class="footer__element"><a href="" class="footer__element--link">Contact</a></li>
+                        <li class="footer__element"><a href="" class="footer__element--link">A propos</a></li>
+                        <li class="footer__element"><a href="" class="footer__element--link">Glossaire</a></li>
+                        <li class="footer__element"><a href="" class="footer__element--link">Autres projets</a></li>
+                    </ul>
+                </nav>
+
+                <div class="footer__langage">
+                    <a href="" class="footer__langage-btn"></a>
+                </div>
+
+                <section class="footer__legal-notice">
+                    <h1 class="footer__legal-notice--title"></h1>
+                    <p class="footer__legal-notice--text"></p>
+                </section>
+
+                <div class="footer__logo">
+                    <a href="" class="footer__logo--link">
+                        <img src="/public/icons/icon_logo-mmi.svg" alt="logo mmi" class="footer__logo--img">
+                    </a>
+                </div>
+            </section>
+         </nav>
     </header>
     
 </body>
