commencment html index.html

--- a/fr/index.html
+++ b/fr/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Skyfall</title>
+    <link rel="stylesheet" href="/src/css/vendors/styles.css">
+    <link rel="icon" href="">
 </head>
-<body>
+<body class="body">
     <header class="head">
          <section class="head__content">
             <a href="index.html" class="head__link">
@@ -19,50 +21,59 @@
                 <a href="index.html" class="head__link">
                     <img src="/public/icons/icon_logo-007.svg" alt="logo" class="head__logo">
                 </a>
-                <img src="/public/icons/icon_menu-burger.svg" alt="icon menu burger" class="head__menu-burger">
+                <img src="/public/icons/icon_close.svg" alt="icon croix" class="head__close">
             </section>
 
             <section class="menu__main">
                 <ul class="menu__main-list">
-                    <li class="menu__main-element"><a href="" class="menu__main-link">My name is bond...</a></li>
-                    <li class="menu__main-element"><a href="" class="menu__main-link">Skyfall</a></li>
-                    <li class="menu__main-element"><a href="" class="menu__main-link">Sam Mendes</a></li>
-                    <li class="menu__main-element"><a href="" class="menu__main-link">L'opening</a></li>
-                    <li class="menu__main-element"><a href="" class="menu__main-link">Casino royale</a></li>
+                    <li class="menu__main-element"><a href="/fr/line.html" class="menu__main-link">My name is bond...</a></li>
+                    <li class="menu__main-element"><a href="/fr/film.html" class="menu__main-link">Skyfall</a></li>
+                    <li class="menu__main-element"><a href="/fr/producer.html" class="menu__main-link">Sam Mendes</a></li>
+                    <li class="menu__main-element"><a href="/fr/music.html" class="menu__main-link">L'opening</a></li>
+                    <li class="menu__main-element"><a href="/fr/book.html" class="menu__main-link">Casino royale</a></li>
                 </ul>
                 <ul class="menu__secodnary-list">
-                    <li class="menu__secondary-element"><a href="" class="menu__secondary-link">Filmographie</a></li>
-                    <li class="menu__secondary-element"><a href="" class="menu__secondary-link">Bibliographie</a></li>
+                    <li class="menu__secondary-element"><a href="/fr/films.html" class="menu__secondary-link">Filmographie</a></li>
+                    <li class="menu__secondary-element"><a href="/fr/novels.html" class="menu__secondary-link">Bibliographie</a></li>
                 </ul>
             </section>
 
             <section class="menu__footer footer">
                 <nav class="footer__nav">
                     <ul class="footer__list">
-                        <li class="footer__element"><a href="" class="footer__element--link">Contact</a></li>
-                        <li class="footer__element"><a href="" class="footer__element--link">A propos</a></li>
-                        <li class="footer__element"><a href="" class="footer__element--link">Glossaire</a></li>
-                        <li class="footer__element"><a href="" class="footer__element--link">Autres projets</a></li>
+                        <li class="footer__element"><a href="/fr/contact.html" class="footer__element--link">Contact</a></li>
+                        <li class="footer__element"><a href="/fr/about.html" class="footer__element--link">A propos</a></li>
+                        <li class="footer__element"><a href="/fr/glossary.html" class="footer__element--link">Glossaire</a></li>
+                        <li class="footer__element"><a href="/fr/projects.html" class="footer__element--link">Autres projets</a></li>
                     </ul>
                 </nav>
 
                 <div class="footer__langage">
-                    <a href="" class="footer__langage-btn"></a>
+                    <a href="/en/index.html" class="footer__langage-btn">Français</a>
                 </div>
 
                 <section class="footer__legal-notice">
-                    <h1 class="footer__legal-notice--title"></h1>
-                    <p class="footer__legal-notice--text"></p>
+                    <h1 class="footer__legal-notice--title">Mathis Liegeon MMI1 B2</h1>
+                    <p class="footer__legal-notice--text">Projet réalisé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard</p>
                 </section>
 
                 <div class="footer__logo">
-                    <a href="" class="footer__logo--link">
+                    <a href="http://formation.univ-fcomte.fr/but/metiers-du-multimedia-et-de-linternet" class="footer__logo--link">
                         <img src="/public/icons/icon_logo-mmi.svg" alt="logo mmi" class="footer__logo--img">
                     </a>
                 </div>
             </section>
          </nav>
     </header>
+
+    <main class="main">
+        <section class="header">
+            <h1 class="header__title">My name is bond, james bond...</h1>
+            <p class="header__text">Retrouvez l’ensemble des films de la saga et de nombreuses informations concernant le plus beau chef d'œuvre de celle-ci : Skyfall</p>
+            <div class="header__scroll-arrow"></div>
+        </section>
+
+    </main>
     
 </body>
 </html>
