--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <link rel="icon" href="/public/icons/icon_logo.svg">
+    <link rel="stylesheet" href="/src/css/vendors/styles.css">
+
 </head>
 <body class="erreur__body">
     <div class="erreur">
