--- a/fr/index.html
+++ b/fr/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Skyfall</title>
     <link rel="stylesheet" href="/src/css/vendors/styles.css">
-    <link rel="icon" href="">
+    <link rel="icon" href="/public/icons/icon_logo-007.svg">
 </head>
 <body class="body">
     <header class="head">
-         <section class="head__content">
+         <div class="head__content">
             <a href="index.html" class="head__link">
                 <img src="/public/icons/icon_logo-007.svg" alt="logo" class="head__logo">
             </a>
             <img src="/public/icons/icon_menu-burger.svg" alt="icon menu burger" class="head__menu-burger">
-         </section>
+        </div>
 
          <nav class="menu">
-            <section class="menu__header">
+            <div class="menu__header">
                 <a href="index.html" class="head__link">
                     <img src="/public/icons/icon_logo-007.svg" alt="logo" class="head__logo">
                 </a>
                 <img src="/public/icons/icon_close.svg" alt="icon croix" class="head__close">
-            </section>
+            </div>
 
-            <section class="menu__main">
+            <div class="menu__main">
                 <ul class="menu__main-list">
                     <li class="menu__main-element"><a href="/fr/line.html" class="menu__main-link">My name is bond...</a></li>
                     <li class="menu__main-element"><a href="/fr/film.html" class="menu__main-link">Skyfall</a></li>
@@ -36,9 +36,9 @@
                     <li class="menu__secondary-element"><a href="/fr/films.html" class="menu__secondary-link">Filmographie</a></li>
                     <li class="menu__secondary-element"><a href="/fr/novels.html" class="menu__secondary-link">Bibliographie</a></li>
                 </ul>
-            </section>
+            </div>
 
-            <section class="menu__footer footer">
+            <div class="menu__footer footer">
                 <nav class="footer__nav">
                     <ul class="footer__list">
                         <li class="footer__element"><a href="/fr/contact.html" class="footer__element--link">Contact</a></li>
@@ -53,7 +53,7 @@
                 </div>
 
                 <section class="footer__legal-notice">
-                    <h1 class="footer__legal-notice--title">Mathis Liegeon MMI1 B2</h1>
+                    <h2 class="footer__legal-notice--title">Mathis Liegeon MMI1 B2</h2>
                     <p class="footer__legal-notice--text">Projet réalisé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard</p>
                 </section>
 
@@ -62,7 +62,7 @@
                         <img src="/public/icons/icon_logo-mmi.svg" alt="logo mmi" class="footer__logo--img">
                     </a>
                 </div>
-            </section>
+            </div>
          </nav>
     </header>
 
